--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,14 @@
 <html>
   <head>
-    <script src="js/index.js" defer></script>
+    <script type='importmap'>
+      {
+      "imports": {
+      "react": "https://esm.sh/react@18.2.0?dev",
+      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client?dev"
+      }
+      }
+    </script>
+    <script type="module" src="js/index.js" defer></script>
   </head>
 
   <body>
