--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,6 @@
 <html>
   <head>
-    <script type='importmap'>
-      {
-      "imports": {
-      "react": "https://esm.sh/react@18.2.0?dev",
-      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client?dev"
-      }
-      }
-    </script>
-    <script type="module" src="js/index.js" defer></script>
+    <script src="js/index.js" defer></script>
   </head>
 
   <body>
